--- a/Mset.env
+++ b/Mset.env
@@ -8,6 +8,6 @@ NOM_BOT= "kakashi"
 LIENS_MENU= "https://static.animecorner.me/2023/08/op2.jpg"
 NUMERO_OWNER= "243808084136"
 ETAT="1"
-DATABASE_URL= "postgresql://gael_user:au9gV5tML9T9bqjVtOVjuixQmzvkY22W@dpg-cqnptaqj1k6c73aqsh0g-a.oregon-postgres.render.com/gael"
+DATABASE_URL= "postgresql://ghost_lcr8_user:P0t4hXiuUcbDthGE1jjUQaKuIzR3Hu8n@dpg-cqn5pmg8fa8c73amf960-a.oregon-postgres.render.com/ghost_lcr8"
 WARN_COUNT= "3"
 STARTING_BOT_MESSAGE="oui"
